--- a/appendix/messung/messung.tex
+++ b/appendix/messung/messung.tex
@@ -20,18 +20,30 @@
     	%
     	\subsection{Translation}\label{ss:anhang_konzept_messung_translation}
     		\subsubsection*{x-Position}
-    			\image{content/3_konzept/image/mittel_5_X}{scale=0.6}{htbp}[x-Position Translation langsam][img:x_tran_langsam]
+    			\image{appendix/messung/image/mittel_5_X}{scale=0.6}{htbp}[x-Position Translation langsam][img:x_tran_langsam]
 				%
-				\image{content/3_konzept/image/schnell_5_X}{scale=0.6}{htbp}[x-Position Translation schnell][img:x_tran_schnell]
+				\image{appendix/messung/image/schnell_5_X}{scale=0.6}{htbp}[x-Position Translation schnell][img:x_tran_schnell]
 			\subsubsection*{y-Position}
-				\image{content/3_konzept/image/mittel_5_Y}{scale=0.6}{htbp}[y-Position Translation langsam][img:y_tran_langsam]
+				\image{appendix/messung/image/mittel_5_Y}{scale=0.6}{htbp}[y-Position Translation langsam][img:y_tran_langsam]
 				%
-				\image{content/3_konzept/image/schnell_5_Y}{scale=0.6}{htbp}[y-Position Translation schnell][img:y_tran_schnell]
+				\image{appendix/messung/image/schnell_5_Y}{scale=0.6}{htbp}[y-Position Translation schnell][img:y_tran_schnell]
 			\subsubsection*{z-Position}
-				\image{content/3_konzept/image/mittel_5_Z}{scale=0.6}{htbp}[z-Position Translation langsam][img:z_tran_langsam]
+				\image{appendix/messung/image/mittel_5_Z}{scale=0.6}{htbp}[z-Position Translation langsam][img:z_tran_langsam]
 				%
-				\image{content/3_konzept/image/schnell_5_Z}{scale=0.6}{htbp}[z-Position Translation schnell][img:z_tran_schnell]
-    		
+				\image{appendix/messung/image/schnell_5_Z}{scale=0.6}{htbp}[z-Position Translation schnell][img:z_tran_schnell]
+		%
+		\subsection{Translation und Rotation}\label{ss:anhang_konzept_messung_translation_rotation}
+			%
+			\subsubsection*{Auslenkung 1}
+				\image{appendix/messung/image/auslenkung_1}{scale=0.6}{htbp}[Auslenkung 1][img:auslenkung_1]
+			%
+			\subsubsection*{Auslenkung 1}
+				\image{appendix/messung/image/auslenkung_2}{scale=0.6}{htbp}[Auslenkung 2][img:auslenkung_2]
+			%			
+			\subsubsection*{Auslenkung 1}
+				\image{appendix/messung/image/auslenkung_3}{scale=0.6}{htbp}[Auslenkung 3 langsam][img:auslenkung_2]
+		
+		   		
     	
     %
     \section{Implementation}\label{s:anhang_implementation_messung}
