--- a/acronyms.tex
+++ b/acronyms.tex
@@ -30,6 +30,7 @@
 \newacronym{ac:cnc}{CNC}{Computerized Numerical Control}
 \newacronym{ac:lms}{LMS}{Least Mean Square}
 \newacronym{ac:sftp}{SFTP}{Secure File Transfer Protocol}
+\newacronym{ac:iir}{IIR}{Infinite Impuls Response}
 
 
 
