--- a/glossary.tex
+++ b/glossary.tex
@@ -56,7 +56,7 @@
 \newglossaryentry{g:gradientenvefahren}{name=Gradientenvefahren, description={Verfahren bei Optimierungen. Dabei wird der  angenäherter Wert stets in die Richtung des negativen Gradienten korrigiert (Methode des steilsten Abstieges)}}
 %
 % Body frame
-\newglossaryentry{g:bodyframe}{name=\glqq body frame\grqq\ , description={Das objektbezogene Koordinatensystem des myRIO}}
+\newglossaryentry{g:bodyframe}{name=Body-Frame, description={Das objektbezogene Koordinatensystem des myRIO}}
 %
 % world Frame
-\newglossaryentry{g:worldframe}{name=\glqq world frame\grqq\ , description={Das festes Referenzsystem der Erde}}
+\newglossaryentry{g:worldframe}{name=World-Frame, description={Das festes Referenzsystem der Erde}}
