--- a/content/3_konzept/konzept.tex
+++ b/content/3_konzept/konzept.tex
@@ -30,15 +30,16 @@ Das Blockdiagramm des Konzeptes ist in Abbildung \vref{img:blockdiagramm} ersich
 %
 % Filterung
 \subsection{Tiefpass-Filterung}\label{ss:tp}
-Durch die \gls{ac:tp}-Filterung der gemessenen Sensordaten wird zum einen das Quantisierungsrauschen gedämpft und zum andern  der Anti-Aliasing-Effekt verhindert. Als Filter wird ein \gls{ac:iir}-Filter verwendet. Wie der Name bereits sagt, hat dieses Filter eine unendlich lange Impulsantwort. Durch den rekursiven Aufbau eines \gls{ac:iir}-Filters kann dieses zusätzlich instabil sein. Der Aufbau eines solchen Filter N-ter Ordnung  ist folgendermassen.
+Durch die \gls{ac:tp}-Filterung der gemessenen Sensordaten wird zum einen das Quantisierungsrauschen gedämpft und zum andern  der Anti-Aliasing-Effekt verhindert. Als Filter wird ein \gls{ac:iir}-Filter verwendet. Wie der Name bereits sagt, hat dieses Filter eine unendlich lange Impulsantwort. Der Aufbau eines solchen Filter N-ter Ordnung ist folgendermassen.
 %
 \formula{
 H(z)=\frac{b_0 + b_1z^{-1}+...+b_Nz^{-N}}{a_0 + a_1z^{-1}+...+a_Nz^{-N}}
 }{
 }[eq:iir_Filter]
 %
-Wobei $b_n$ und $a_n$ die jeweiligen Filterkoeffizienten sind.  
-\subsubsection*{Filterentwurf}
+Wobei $b_n$ und $a_n$ die jeweiligen Filterkoeffizienten sind. Ein Vorteil des \gls{ac:iir}-Filters und Grund weshalb es dem \gls{ac:fir}-Filters oft vorgezogen wird ist, dass es eine grössere Effizient auf eine kurze Verzögerung aufweist. Um mit einem \gls{ac:fir}-Filter dieselbe Filterwirkung wie mit einem \gls{ac:iir}-Filter zu erreichen ist eine deutlich grössere Filterordnung nötig. Somit vergrössert sich wie erwähnt die Verzögerung durch das Filter. Ein Nachteil ist, dass durch den rekursiven Aufbau das \gls{ac:iir}-Filters instabil sein kann.
+% 
+\subsubsection*{Filterentwurf}\label{subsub:filterentwurf}
 Ein vielfach verwendetes Verfahren zum Entwurf von \gls{ac:iir}-Filtern ist die Bilineare-Transforma\-tion. Hierbei wird die Übertragungsfunktion $H(s)$ eines Analogfilters in die Übertragungsfunktion $H(z)$ eines Digitalfilters überführt. Das Analogfilter entspricht dabei einem zeitkontinuierlichen System, das Digitalfilter bekanntlich einem zeitdiskreten. Die Labplacevariable s wird  dazu durch eine Funktion der Variable z substituiert. Im Unterricht bei  Herrn Vetter im vierten Semester hat sich gezeigt, dass die Substitution 
 %
 \formula{
@@ -53,14 +54,30 @@ Eine weitere Möglichkeit zum Entwurf eines \gls{ac:iir}-Filters bieten heute Ent
 % Filterentwurf
 \image{content/3_konzept/image/filterentwurf}{scale=0.8}{htbp}[Spezifikationen eines Tiefpassfilters \cite{img:filterentwurf}][img:spezfilter] 
 %
-Zum Entwurf des Filters müssen zuerst einige Spezifikationen des Filters festgelegt werden. Da wir auf anraten von Herrn Vettre ein Filter mit einer geringen Ordnung (Anzahl der Filterkoeffizienten) einsetzen, kann die in der Abbildung \vref{img:spezfilter} ersichtliche Dämpfung im Durchlass- und Sperrbereich nicht eingestellt werden. Im Beispielprojekt wurde im Durchlassbereich eine Dämpfung von \unit[1]{dB} zugelassen und im Sperrbereich eine Dämpfung von \unit[60]{dB}. Die Durchlassfrequenz ist normiert auf 0.125 und die Sperrfrequenz auf 0.45 gesetzt.  Dies ergäbe für ein Butterworth-Filter berechnet mit der Funktion buttord() in \gls{g:matlab} eine Ordnung von 6. Diese Ordnung ist zu gross.
+Zum Entwurf des Filters müssen zuerst einige Spezifikationen des Filters festgelegt werden. Da wir auf anraten von Herrn Vettre ein Filter mit einer geringen Ordnung (Anzahl der Filterkoeffizienten) einsetzen, kann die in der Abbildung \vref{img:spezfilter} ersichtliche Dämpfung im Durchlass- und Sperrbereich nicht eingestellt werden. Im Beispielprojekt wurde im Durchlassbereich eine Dämpfung von \unit[1]{dB} zugelassen und im Sperrbereich eine Dämpfung von \unit[60]{dB}. Die Durchlassfrequenz ist normiert auf 0.125 und die Sperrfrequenz auf 0.45 gesetzt.  Dies ergäbe für ein Butterworth-Filter berechnet mit der Funktion buttord() in \gls{g:matlab} eine Ordnung von 6. Diese Ordnung ist zu gross. Nach Absprache mit den Betreuern wurde die Sperrfrequenz wie im Beispielprojekt gewählt und die Ordnung folgendermassen festgelegt. 
 %
 \begin{itemize}
-\item f\low{stop} = \unit[20]{Hz}: Sperrfrequenz
+\item f\low{stop} = \unit[30]{Hz}: Sperrfrequenz
 \item N = 2: Filterordnung
 \end{itemize}
 %
+Der Filterentwurf kann anschliessend in \gls{g:matlab} mit dem Befehl butter() erfolgen.
+%
+\begin{lstlisting}[style=Matlab,caption={Butterworth-Filterentwurf mit butter()},label={list:butter}]
+fs = 30;       % Sperrfrequenz [Hz]
+fs_norm = fs/(fa/2);  % Normierung auf halbe Abtastfrequenz
+Ordnung = 2;    % Ordnung des Filters
 
+[b_TP,a_TP] = butter(Ordnung,fs_norm);
+\end{lstlisting}
+%
+Die Filterkoeffizienten sind in b\low{TP} und a\low{TP} abgelegt und können mit der Funktion filter() auf das Signal angewendet werden.
+% 
+\begin{lstlisting}[style=Matlab,caption={Anwenden des Filters},label={list:filter}]
+% Tiefpassfilterung
+axfilt = filter(b_TP,a_TP,ax); 
+\end{lstlisting}
+%
 %Die aufgenommenen Beschleunigungsdaten werden aufgetrennt in die Erdbeschleunigung und die Beschleunigung der Bewegung. Die Erdbeschleunigung ermöglicht das Schätzen der Orientierung wie dies in Abschnitt \vref{subsec:orientierungsschätzung} genauer erklärt ist.\par
 %%
 %Die Erdbeschleunigung ist in jedem Falle eine konstante Beschleunigung. Aus diesem Grund kann diese Beschleunigung als eine reine DC-Komponente betrachtet werden. Mit einer Tiefpass-Filterung kann somit die Erdbeschleunigung von der Beschleunigung der Bewegung getrennt werden. Als Tiefpassfilter wurde ein \gls{ac:fir}-Filter gewählt.  Dies aus dem Grund, da das \gls{ac:fir}-Filter eine lineare Phase hat.
@@ -239,7 +256,9 @@ s_{0} & Anfangsposition [m]\\
 v & Geschwindigkeit [$m/s$]
 }[eq:weg]
 % 
-Die Integration erfolgt wie bereits im Kapitel \vref{ch:grundlagen} im Abschnitt \vref{sec:numint} beschrieben mittels der Trapezmethode.
+Die Integration erfolgt wie bereits im Kapitel \vref{ch:grundlagen} im Abschnitt \vref{sec:numint} beschrieben mittels der Trapezmethode. Speziel dabei ist, dass dafür ein \gls{ac:iir}-Filter angewendet wird. Dazu wird die in Abschnitt \vref{subsub:filterentwurf} beschriebene Bilineare-Transformation verwendet.\par
+%
+
 % 
 %
 %Software
