--- a/bibliography.bib
+++ b/bibliography.bib
@@ -281,12 +281,38 @@
   keywords = {lit},
 }
 
-
 @ONLINE{lit:labview_matlab,
   url = {http://zone.ni.com/reference/en-XX/help/371361J-01/gmath/matlab_script_node/},
   title = {MATLAB script},
   author = {National Instruments},
   urldate = {2014-06-24},
   year = {2014},
+  keywords = {lit},
+}
+
+@ONLINE{lit:labview_networkstream,
+  url = {http://www.ni.com/white-paper/12267/en/},
+  title = {Lossless Communication with Network Streams: Components, Architecture, and Performance},
+  author = {National Instruments},
+  urldate = {2014-06-25},
+  year = {2014},
+  keywords = {lit},
+}
+
+@ONLINE{img:labview_networkstream,
+  url = {hhttp://www.ni.com/cms/images/devzone/tut/image8813805618044017000.jpg},
+  title = {Lossless Communication with Network Streams: Components, Architecture, and Performance},
+  author = {National Instruments},
+  urldate = {2014-06-25},
+  year = {2014},
+  keywords = {pic},
+}
+
+@ONLINE{lit:labview_graph_as_chart,
+  url = {http://digital.ni.com/public.nsf/allkb/18B56D8556D44BF18625753D006EFF7C},
+  title = {How Do I Make an XY Graph Behave as an XY Chart?},
+  author = {National Instruments},
+  urldate = {2014-06-25},
+  year = {2013},
   keywords = {lit},
 }
