add a simple sentence ;-)

--- a/report.tex
+++ b/report.tex
@@ -282,7 +282,7 @@
 % Quellen
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter*{Quellen}
-    In diesem Abschnitt sind alle Quellen des Dokumentes verzeichnet. Wird keine Referenz auf eine Quelle angegeben, so handelt es sich um selbst erarbeitete Inhalte der Autoren.
+    In diesem Abschnitt sind alle Quellen des Dokumentes verzeichnet. Wird keine Referenz auf eine Quelle angegeben, so handelt es sich um selbst erarbeitete Inhalte der Autoren. Alle aus dem Internet stammenden Referenzen sind zusätzlich auf der beiliegenden CD abgelegt (siehe Anhang \vref{s:anhang_quellen_internet}).
     %
     %Literatur
     \printbibliography[heading=lit,keyword=lit,prefixnumbers=Lit,resetnumbers=true]
