--- a/glossary.tex
+++ b/glossary.tex
@@ -60,3 +60,12 @@
 %
 % world Frame
 \newglossaryentry{g:worldframe}{name=World-Frame, description={Das festes Referenzsystem der Erde}}
+%
+% LTI
+\newglossaryentry{g:lti}{name=LTI,description={linear time-invariant, System das sowohl \gls{g:linear} sowie \gls{g:zeit_invariant} ist}}
+%
+% linear
+\newglossaryentry{g:linear}{name=linear,description={Summe von gewichteten Eingangssignalen wird zu Summe von gleich gewichteten Ausgangssignalen verarbeitet}}
+%
+% zeit_invariant
+\newglossaryentry{g:zeit_invariant}{name=zeit-invariant,description={System ist zeitunabhängig, ein um $\tau$ verzögertes Signal am Eingang ist auch am Ausgang um $\tau$ verzögert}}
