add images to section Auswertung tran rot

--- a/content/3_konzept/konzept.tex
+++ b/content/3_konzept/konzept.tex
@@ -778,13 +778,21 @@ b_1 &= \frac{T_a}{2}
 		%
 		\subsubsection*{Datenauswertung}
 			%
+			
+			\paragraph*{Auslenkung 1}
+				\image{content/3_konzept/image/auslenkung_1_Y}{scale=0.8}{htbp}[Translation Rotation Auslenkung 1][img:auslenkung_1_y]
+			\paragraph*{Auslenkung 2}
+				\image{content/3_konzept/image/auslenkung_2_Y}{scale=0.8}{htbp}[Translation Rotation Auslenkung 2][img:auslenkung_2_y]
+			\paragraph*{Auslenkung 3}
+				\image{content/3_konzept/image/auslenkung_3_Y}{scale=0.8}{htbp}[Translation Rotation Auslenkung 3][img:auslenkung_3_y]
 			%
-			Die Messerergebnisse zusammengefasst sind in der Tabelle \vref{tab:auswertung_tran} dargestellt. Darauf basierend erfolgt nun im folgenden Abschnitt \vref{ss:interpretation_tran} die Interpretation und Diskussion.
 			%
-			\input{content/3_konzept/table/auswertung_tran_rot}	 
+			Die Tabelle \vref{tab:auswertung_tran_rot} zeigt die beschriebenen Messergebnisse zusammengefasst. Die dienen als Ausgangslage für die folgende Interpretation (siehe folgender Abschnitt \vref{ss:interpretation_tran_rot}).
+			%
+			\input{content/3_konzept/table/auswertung_tran_rot}
 	%
 	%
-	\subsection{Interpretation}\todo{Histogramm, Gruppenvergleich,Messfehler}
+	\subsection{Interpretation}\label{ss:interpretation_tran_rot}\todo{Histogramm, Gruppenvergleich,Messfehler}
 %
 %
 %Validierung
